# Inner-Product-FE

./: Cargo.toml  README.md  populate.py  report.txt
benches/: Cargo.toml
benches/src/: bench_biguint.rs  bench_malachite.rs  bench_nilsimsa_comparator.rs  bench_ristretto.rs
client/: Cargo.toml
client/src/: client.rs  main.rs
comparator/: Cargo.toml
comparator/src/: lib.rs  traits.rs
compute-server/: Cargo.toml
compute-server/src/: compute_server.rs
compute_server/: Cargo.toml
compute_server/src/: compute_server.rs  main.rs
fe/: Cargo.toml
fe/src/: consts.rs  ec_fe.rs  ff_fe.rs  generic.rs  lib.rs  traits.rs
fuzzy_hashes/: Cargo.toml
fuzzy_hashes/src/: lib.rs  nilsimsa.rs
instance-server/: Cargo.toml
instance-server/src/: instance_server.rs  main.rs
malachite-znz-fe/: Cargo.toml
malachite-znz-fe/src/: consts.rs  ddh_fe.rs  lib.rs
messages/: Cargo.toml
messages/src/: lib.rs
num-znz-fe/: Cargo.toml
num-znz-fe/src/: consts.rs  ddh_fe.rs  lib.rs
ristretto-znz-fe/: Cargo.toml
ristretto-znz-fe/src/: ddh_fe.rs  lib.rs
