[package]
name = "compute-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
env_logger = "0.11.8"
fe = { version = "0.1.0", path = "../fe" }
fuzzy_hashes = { version = "0.1.0", path = "../fuzzy_hashes" }
log = "0.4.29"
messages = { version = "0.1.0", path = "../messages" }
postcard = { version = "1.1.3", features = ["use-std"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "net", "io-util", "sync"] }
clap = { version = "4.5.57", features = ["derive"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
futures = "0.3.31"
