[package]
name = "num-znz-fe"
version = "0.1.0"
edition = "2024"

[dependencies]
crypto-bigint = { version = "0.6.1", features = ["rand"] }
num-bigint = { version = "0.4.6", features = ["rand"] }
num-traits = "0.2.19"
rand = { version = "=0.8.5", features = ["std_rng"] }

[dev-dependencies]
criterion = "0.8.1"
proptest = "1.9.0"
